<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="45dp"
            android:layout_margin="20dp"
            android:textColor="@color/satc"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/massa"
            android:textSize="20dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/massa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="number"
            android:textSize="20dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="number"
            android:textSize="20dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/satc"
            android:onClick="calcIMC"
            android:padding="15dp"
            android:text="@string/botao"
            android:textColor="@color/satctext"
            android:textSize="15dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="20dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>